# Shopping-System

./: .replit  Cashier.py  Test.py  admin.py  api.py  customer.py  database.db  inventory.py  main.py  pyproject.toml  test.py  test2.py
Barcodes/: BarcodeScaner.py  barcodeImageGen.py
