[tool.poetry]
name = "shopping-system-3"
version = "0.1.0"
description = ""
authors = ["Replit user <replituser@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
barcodenumber = "^0.5.0"
flask = "^1.1.2"
sqlalchemy = "^1.3.23"
flask-restful = "^0.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
